# zetomap

./: README.md  docker-compose.yml
api/: Dockerfile  README.md  pyproject.toml  requirements_dev.txt
api/zetomapapi/: cli.py  constants.py  defaults.py
api/zetomapapi/api/: __init__.py  models.py  server.py  utils.py
api/zetomapapi/data/: qPCR_Seq_Shared.xlsx
api/zetomapapi/orm/: importer.py  manager.py  models.py
frontend/: .env.local  .gitignore  Dockerfile  package-lock.json  package.json
frontend/internals/generators/component/: index.ts  index.tsx.hbs
frontend/internals/startingTemplate/src/: index.tsx
frontend/internals/startingTemplate/src/app/: index.tsx
frontend/src/: index.tsx
frontend/src/api/: api.ts  base.ts  common.ts  configuration.ts  index.ts  openapi.json  sdk.ts
frontend/src/api/data/: index.ts  neighbors.ts  people.ts  presentations.ts  publications.ts  search.ts  structure.ts  tutorials.ts
frontend/src/api/server/: index.ts
frontend/src/api/utils/: index.ts
frontend/src/app/: App.css  index.tsx
frontend/src/app/components/CompoundsList/: Loadable.ts  index.tsx
frontend/src/app/components/PredictFromGenes/: index.tsx
frontend/src/app/components/aop-list-card/: index.tsx
frontend/src/app/components/exp-data-card/: exp-data-card.spec.tsx  exp-data-card.tsx
frontend/src/app/components/focus-area-card/: focus-area-card.tsx  focus-area.spec.tsx
frontend/src/app/components/generic-card/: generic-card.spec.tsx  generic-card.tsx
frontend/src/libs/visualization/: README.md
frontend/src/styles/theme/: ThemeProvider.tsx
(+37 files in other folders)
